--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.0",
@@ -15,6 +16,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.0.1",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
@@ -22,5 +24,10 @@
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
+  },
+  "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1"
   }
 }
