--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "eslint-plugin-react": "^7.0.1",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
-    "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
@@ -28,6 +27,7 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-hot-loader": "next",
     "react-router-dom": "^4.1.1"
   }
 }
