--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "pg": "^6.2.2",
+    "pg-hstore": "^2.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "sequelize": "^3.30.4"
   }
 }
