add register route to save user

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "pg": "^6.2.2",
