--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^6.2.2",
     "pg-hstore": "^2.3.2",
     "react": "^15.5.4",
