--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport-local": "^1.0.0",
     "pg": "^6.2.2",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
