--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": [
-    ["env", { modules: false }],
+    "es2015",
+    "stage-0",
     "react"
   ],
   plugins: [
     "transform-object-rest-spread",
-    "react-hot-loader/babel"
   ]
 }
