--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "nwre87 <nwre87@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
