--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "dateformat": "^2.0.0",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "passport": "^0.3.2",
