--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "autoprefixer": "^7.1.1",
     "axios": "^0.16.1",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
@@ -42,6 +43,7 @@
     "passport-local": "^1.0.0",
     "pg": "^6.2.2",
     "pg-hstore": "^2.3.2",
+    "postcss-loader": "^2.0.5",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
