--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dateformat": "^2.0.0",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "pg": "^6.2.2",
